# commit-ai

./: .gitignore  README.md  main.py  pyproject.toml  test_commits.py  tui.py
scripts/: helpers.py  prototype_notebook.py  simulate_git_repo.sh  testing_ollama_API.sh  textual_try.py  tui.py
scripts/__marimo__/session/: prototype_notebook.py.json
src/commit_ai/: config.json  helpers.py  main.py  models.py
