[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-ai"
version = "0.1.0"
description = "Write better commit message with an AI first shot that's editable. 100% in the terminal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.0",
    "textual>=6.3.0",
    "typer>=0.19.2",
]

[project.scripts]
commit-ai = "main:typer_app"

[tool.setuptools]
#packages = ["commit-ai"]
