[project]
name = "commit-ai"
version = "0.1.0"
description = "AI commit messages writer from a single command line"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.0",
    "textual>=6.3.0",
    "typer>=0.19.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
commit-ai = "commit_ai.main:typer_app"
